--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -6,16 +6,30 @@
   margin: 0 auto;
   max-width: 1200px;
   position: relative;
-  // overflow-x: hidden;
+
+  .contentSigned::before {
+    content: '';
+    height: 100vh;
+    width: 420px;
+    background: url('./assets/background.svg') no-repeat;
+    background-size: cover;
+    position: absolute;
+    right: -165px;
+    top: 0;
+  }
 }
 
-.contentSigned::before {
-  content: '';
-  height: 100vh;
-  width: 420px;
-  background: url('./assets/background.svg') no-repeat;
-  background-size: cover;
-  position: absolute;
-  right: -165px;
-  top: 0;
+@media only screen and (max-width: 768px) {
+  .contentWrapper {
+    align-items: center;
+    display: flex;
+    flex-direction: column;
+    height: unset;
+    justify-content: center;
+    margin-top: 40px;
+
+    &::before {
+      display: none;
+    }
+  }
 }
