--- a/src/components/LoginBox/styles.module.scss
+++ b/src/components/LoginBox/styles.module.scss
@@ -1,15 +1,13 @@
 .loginBoxWrapper {
-  height: 100vh;
-  width: 100%;
+  align-items: center;
   background: #17171a url(../../assets/banner-girl.png) no-repeat center top;
-
-  padding: 440px 80px 0;
-  text-align: center;
-
   display: flex;
   flex-direction: column;
   justify-content: center;
-  align-items: center;
+  height: 100vh;
+  padding: 440px 80px 0;
+  text-align: center;
+  width: 100%;
 
   strong {
     font-size: 32px;
@@ -17,26 +15,49 @@
   }
 
   .signInWithGitHub {
+    align-items: center;
     background: #ffcd1e;
-    margin-top: 32px;
-    padding: 0 40px;
-    height: 56px;
     color: #09090a;
+    display: flex;
+    justify-content: center;
+    height: 56px;
     font-size: 14px;
     font-weight: bold;
-    text-transform: uppercase;
+    margin-top: 32px;
+    padding: 0 40px;
     text-decoration: none;
-    
-    display: flex;
-    align-items: center;
-    justify-content: center;
+    text-transform: uppercase;
+
 
     svg {
       margin-right: 16px;
     }
-    
-    &:hover{
+
+    &:hover {
       filter: brightness(0.9);
-    };
+    }
+  }
+}
+
+@media only screen and (max-width: 768px) {
+  .loginBoxWrapper {
+    height: unset;
+    justify-content: unset;
+    margin-bottom: 30px;
+    width: 90%;
+
+    .signInWithGitHub {
+      margin-bottom: 30px;
+      min-height: 56px;
+      min-width: 230px;
+
+      svg {
+        min-width: 24px;
+      }
+    }
+
+    strong {
+      margin-top: 60px;
+    }
   }
 }
