--- a/src/components/MessageList/styles.module.scss
+++ b/src/components/MessageList/styles.module.scss
@@ -1,22 +1,23 @@
 .messageListWrapper {
+  align-items: flex-start;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  align-items: flex-start;
 
   > img {
     height: 28px;
-    margin: 32px 0;
+    margin: 32px 20px;
   }
 
   .messageList {
-    list-style: none;
     display: flex;
+    flex: 1;
     flex-direction: column;
     gap: 40px;
-    flex: 1;
-
     justify-content: center;
+    list-style: none;
+    padding: 30px;
+
 
     .message {
       max-width: 440px;
@@ -31,21 +32,21 @@
       }
 
       .messageUser {
-        margin-top: 16px;
-        display: flex;
         align-items: center;
+        display: flex;
+        margin-top: 16px;
 
         .userImage {
-          padding: 2px;
           background: linear-gradient(100deg, #ff008e 0%, #ffcd1e 100%);
           border-radius: 50%;
           line-height: 0;
-          
+          padding: 2px;
+
           img {
+            border: 4px solid #121214;
+            border-radius: 50%;
             width: 30px;
             height: 30px;
-            border-radius: 50%;
-            border: 4px solid #121214;
           }
         }
 
@@ -56,4 +57,21 @@
       }
     }
   }
+}
+
+@media only screen and (max-width: 768px) {
+  .messageListWrapper {
+    margin: 0;
+    
+    > img {
+      margin: 15px auto;
+      width: 90%;
+    }
+
+    .messageList {
+      max-width: 380px;
+      padding: 15px;
+    }
+  }
+
 }
