--- a/src/components/SendMessageForm/styles.module.scss
+++ b/src/components/SendMessageForm/styles.module.scss
@@ -1,24 +1,22 @@
 .sendMessageFormWrapper {
-  background: #1b1b1f;
-  padding: 24px;
+  align-items: center;
   align-self: center;
-
+  background: #1b1b1f;
   display: flex;
   flex-direction: column;
-  align-items: center;
-  text-align: center;
-
+  padding: 24px;
   position: relative;
+  text-align: center;
 }
 
 .signOutButton {
   background: transparent;
   border: 0;
   color: #c4c4cc;
-  position: absolute;
-  left: 24px;
-  top: 24px;
   cursor: pointer;
+  left: 24px;
+  position: absolute;
+  top: 24px;
 
   &:hover {
     filter: brightness(0.9);
@@ -26,21 +24,21 @@
 }
 
 .userInformation {
+  align-items: center;
   display: flex;
   flex-direction: column;
-  align-items: center;
 
   .userImage {
-    padding: 3px;
     background: linear-gradient(100deg, #ff008e 0%, #ffcd1e 100%);
     border-radius: 50%;
     line-height: 0;
+    padding: 3px;
 
     img {
-      width: 94px;
-      height: 94px;
-      border-radius: 50%;
       border: 6px solid #121214;
+      border-radius: 50%;
+      height: 94px;
+      width: 94px;
     }
   }
 
@@ -51,44 +49,42 @@
   }
 
   .userGithub {
-    display: flex;
     align-items: center;
-
-    margin-top: 8px;
     color: #c4c4cc;
-    
+    display: flex;
+    margin-top: 8px;
+
     svg {
       margin-right: 8px;
-    };
+    }
   }
 }
 
 .sendMessageForm {
+  align-self: stretch;
+  background: #202024;
   display: flex;
   flex-direction: column;
-  align-self: stretch;
   margin-top: 48px;
-  
-  background: #202024;
-  
+
   label {
-    padding: 18px 24px;
-    font-size: 20px;
     background: #29292e;
+    font-size: 20px;
     font-weight: bold;
-    text-align: left
-  };
+    padding: 18px 24px;
+    text-align: left;
+  }
 
   textarea {
     background: transparent;
     border: 0;
+    color: #e1e1e6;
+    height: 160px;
+    line-height: 24px;
     padding: 24px;
     resize: none;
-    height: 160px;
-    color: #e1e1e6;
-    line-height: 24px;
-    
-    &:focus{
+
+    &:focus {
       outline: 0;
     }
 
@@ -98,25 +94,44 @@
   }
 
   button {
+    align-items: center;
+    align-self: flex-end;
     background: #ff008e;
-    margin: 24px;
     border: 0;
-    padding: 0 32px;
-    height: 40px;
     color: #fff;
     cursor: pointer;
-    align-self: flex-end;
+    display: flex;
     font-size: 14px;
     font-weight: bold;
-    text-transform: uppercase;
-    text-decoration: none;
-    
-    display: flex;
-    align-items: center;
+    height: 40px;
     justify-content: center;
-
+    margin: 24px;
+    padding: 0 32px;
+    text-decoration: none;
+    text-transform: uppercase;
+    
     &:hover {
       filter: brightness(0.9);
+    }
+  }
+}
+
+@media only screen and (max-width: 768px) {
+  .sendMessageFormWrapper {
+    margin-top: 30px;
+    max-width: 400px;
+    transform-style: preserve-3d;
+    width: 90%;
+
+    &::before {
+      background: url("../../assets/background.svg") no-repeat;
+      background-size: cover;
+      content: "";
+      height: 94vh;
+      position: absolute;
+      top: -20px;
+      transform: translateZ(-1em);
+      width: 100vw;
     }
   }
 }
